add findDailyTimeEntries()
