# src/main/java/com/an9elkiss/api/timedo/service/TimeEntryService.java
@@ -1,5 +1,6 @@
 package com.an9elkiss.api.timedo.service;
 
+import java.util.Date;
 import java.util.Map;
 
 import com.an9elkiss.api.timedo.command.TimeEntriesCmd;
@@ -20,5 +21,7 @@ public interface TimeEntryService {
 	ApiResponseCmd<WeekDaysCmd> getWeekDays();
 
 	ApiResponseCmd<TimeEntriesCmd> findTimeEntries(Map<String, ?> searchParams);
+
+	ApiResponseCmd<TimeEntriesCmd> findDailyTimeEntries(Date date);
 
 }
